# mlx_ffi

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: bindings.rs  lib.rs  ops.rs  prelude.rs
tests/: array.rs  metal.rs
